deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aniston-apps
  labels:
    app.kubernetes.io/managed-by: aniston
